--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 @import './scss/contacto.css';
 @import './scss/footer.css';
 @import './scss/floating-nav.css';
+@import './scss/habilidades.css';
 
 /*# sourceMappingURL=App.css.map */
 
@@ -14,17 +15,19 @@ html {
 }
 
 section {
-    padding: 1em;
+    color: white;
+    min-height: 100vh;
 }
 
 .seccion-oscura {
-    background-color: #040D12;
-    color: white;
+    background-color: #2f2e34;
+}
+.seccion-clara {
+    background-color: #34353a;
 }
 
-.seccion-clara {
-    background-color: white;
-    color: black;
+pre{
+    color: #d99a35;
 }
 
 .seccion-titulo {
@@ -35,7 +38,7 @@ section {
 
 .descripcion {
     width: 60%;
-    margin: 2em 0;
+    margin: 1em;
 }
 
 h1,
@@ -45,6 +48,8 @@ p {
     text-align: center;
 }
 
-.icon{
-    fill:green;
+a ,a:visited, a:active{
+    color: white;
+    text-decoration: none;
+    text-decoration-line: none;
 }
