--- a/src/scss/home.css
+++ b/src/scss/home.css
@@ -5,11 +5,15 @@
     align-items: center;
     justify-content: space-evenly;
     height: 80vh;
+    img{
+        height: 80%;
+    }
 }
 
 .home-descripcion{
     width: 50%;
     line-height: 2em;
+
      background: #686869;
      padding: 2em;
      border: 1em inset #aeaeae;
