--- a/src/App.css
+++ b/src/App.css
@@ -11,22 +11,27 @@
 /*# sourceMappingURL=App.css.map */
 
 html {
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
+    font-family: "Open Sans", sans-serif;
+
 }
 
 section {
     color: white;
     min-height: 100vh;
+    --bg-color-dark: #2f2e34
 }
+
 
 .seccion-oscura {
     background-color: #2f2e34;
 }
+
 .seccion-clara {
     background-color: #34353a;
 }
 
-pre{
+pre {
     color: #d99a35;
 }
 
@@ -48,7 +53,9 @@ p {
     text-align: center;
 }
 
-a ,a:visited, a:active{
+a,
+a:visited,
+a:active {
     color: white;
     text-decoration: none;
     text-decoration-line: none;
