--- a/src/scss/experiencia.css
+++ b/src/scss/experiencia.css
@@ -1,31 +1,128 @@
 #experiencia {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
 }
 
 
 .experiencia-list {
-    align-items: center;
-    width: 70%;
+  align-items: center;
+  width: 70%;
 
 }
 
 
-.experiencia-item  {
-    padding: 1em;
-    width: 15%;
-    display: inline-block;
-    margin: 1em 1em;
+.experiencia-item {
+  padding: 1em;
+  width: 15%;
+  display: inline-block;
+  margin: 1em 1em;
+  align-items: center;
+  transition: border 0.3s;
+  border: 2px solid white;
+  border-radius: 0.5em;
+  height: 80%;
 
-    transition: border 0.3s;
-    border: 2px solid white;
-    border-radius: 0.5em;
+  svg {
+    position: relative;
+    height: 50px;
+    width: 50px;
+    bottom: -40px;
+    z-index: 1;
+  }
+
+  p,
+  h4 {
+    text-overflow: ellipsis;
+  }
 }
 
 
 .experiencia-item:hover {
-    border: 2px solid gray;
+  border: 2px solid gray;
+}
+
+
+.exp-item {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+  /* If you want dots under the hoverable text */
+}
+
+.exp-item .exp-desc {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+.exp-item:hover {
+  cursor: pointer;
+  border: white;
+}
+
+.exp-item:hover .exp-desc {
+  visibility: visible;
+}
+
+svg {
+  align-items: center;
+  display: inline-block;
+
+}
+
+.exp-spec {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  gap: 5em;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.square {
+  display: inline-block;
+
+  text-align: center;
+  font-size: 3em;
+
+  p {
+    margin: 1em;
+    text-align: center;
+    font-size: 0.5em;
+    color: white;
+
+  }
+}
+
+.red {
+  color: red;
+}
+
+.orange {
+  color: orange
+}
+
+.circle:hover {
+  stroke: white;
+}
+
+.exp-desc {
+  height: 10em;
+  width: 10em;
+  background-color: gray;
+  color: white;
+  border-radius: 30px;
+  text-align: center;
+  h1{font-weight: 600;}
 }
