--- a/src/scss/habilidades.css
+++ b/src/scss/habilidades.css
@@ -9,15 +9,16 @@
 
 .habilidades-list {
     margin: 2em;
-    width: 80%;
+    width: 70%;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    flex-wrap: wrap;
 }
 
 .habilidades-item {
+    margin: 1em 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,12 +40,4 @@
     height: 5em;
     top: 15%;
     transition: all ease 0.5s;
-}
-
-
-.skill-icon:hover {
-    height: 7em;
-    width: 7em;
-    transform: translate(0,-20px);
-
 }
