--- a/src/scss/tecnologias.css
+++ b/src/scss/tecnologias.css
@@ -1,46 +1,91 @@
 #tecnologias {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    text-align: center;
+    overflow: hidden;
 }
 
-.list-tecnologias {
-    text-align: center;
-    width: 70%;
-    height: 100%
+.logos {
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 60px;
 }
 
-.tecnologias-item {
-    padding: 1em 0.5em;
-    margin: 1em 1em;
-    color: black;
-    display: inline-block;
-    text-align: center;
-    align-items: center;
-    justify-items: center;
-    background-color: #eaeaea;
-    border-radius: 10px;
-    transition: all 0.5s ease;
-    border: 2px solid white;
 
-    hr {
-        width: 70%;
-    }
-
-    img {
-        height: 5em;
-        width: 6em;
-    }
-
+.logos-slide img {
+    width: 10em;
 }
-
 
 h3 {
     font-size: 1.5em;
 }
+
 .tecnologias-item:hover {
     border: 2px solid gray;
 }
 
+
+
+
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.logos{
+    overflow: hidden;
+    white-space: nowrap;
+    width: 80%;
+    margin: 1em auto 0;
+    position: relative;
+}
+
+.logos:hover{
+    animation-play-state: paused;
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+
+        transform: translateX(-800%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.logos-slide {
+    display: inline-block;
+    animation: slide 80s linear infinite backwards;
+}
+
+.logos-slide img {
+    height: 5em;
+    fill: white;
+}
+
+.logos:before {
+    content: '';
+    width: 200px;
+    height: 100px;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0), var(--bg-color-dark));
+    position: absolute;
+    left: 0;
+    z-index: 1;
+}
+
+.logos:after {
+    content: '';
+    width: 200px;
+    height: 100px;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0), var(--bg-color-dark));
+    position: absolute;
+    z-index: 1;
+    right: 0;
+}
