--- a/src/scss/experiencia.css
+++ b/src/scss/experiencia.css
@@ -4,14 +4,12 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-
 }
 
 
 .experiencia-list {
   align-items: center;
   width: 70%;
-
 }
 
 
@@ -84,15 +82,15 @@ svg {
 .exp-spec {
   width: 80%;
   display: flex;
-  align-items: center;
-  gap: 5em;
+  align-items: start;
+  gap: 1em;
   flex-wrap: wrap;
   justify-content: center;
 }
 
+
 .square {
   display: inline-block;
-
   text-align: center;
   font-size: 3em;
 
@@ -118,11 +116,15 @@ svg {
 }
 
 .exp-desc {
+  margin: 0;
   height: 10em;
   width: 10em;
   background-color: gray;
   color: white;
   border-radius: 30px;
   text-align: center;
-  h1{font-weight: 600;}
+
+  h1 {
+    font-weight: 600;
+  }
 }
