--- a/src/scss/habilidades.css
+++ b/src/scss/habilidades.css
@@ -3,18 +3,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+
 }
-
-
 
 .habilidades-list {
     margin: 2em;
-    width: 70%;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 1em;
     flex-wrap: wrap;
+
 }
 
 .habilidades-item {
@@ -23,6 +24,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
 
 .image-container {
