--- a/src/scss/footer.css
+++ b/src/scss/footer.css
@@ -8,14 +8,26 @@ footer {
 #footer-titulo {
     color: #2f2e34;
     transition: color 1.5s linear;
+    animation: blink 5s linear 0s infinite  alternate-reverse;
 }
 
-#footer-titulo:hover {
-    color: #aeaeae;
+@keyframes blink {
+    0% {
+        color: transparent;
+    }
+
+
+    50% {
+        color: white;
+    }
+    100% {
+        color: transparent;
+    }
 }
 
 
-.nada {
+
+footer-titulo .nada {
 
     color: #0d0d0d;
     color: #aeaeae;
