--- a/src/scss/navbar.css
+++ b/src/scss/navbar.css
@@ -30,7 +30,7 @@ nav:hover nav{
 }
 
 .nav-link a {
-    padding: 0.5em 1em;
+    padding: 0.2em 1em;
     text-decoration: none;
     color: gray;
     transition: color 0.5s ease, border 1s ease;
@@ -40,7 +40,7 @@ nav:hover nav{
 .nav-link a:hover {
     cursor: pointer;
     color: white;
-    border: 2px solid white
+    border-top: 2px solid white;
 }
 
 @keyframes adjust-navbar{
